applications/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma

spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system

  hostnames:
    - uptime.k8s.home

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: uptime-kuma
          port: 3001
